Fix button spacing

--- a/src/fastlife/assets/dist.css
+++ b/src/fastlife/assets/dist.css
@@ -240,6 +240,9 @@
   .m-4 {
     margin: calc(var(--spacing) * 4);
   }
+  .my-4 {
+    margin-block: calc(var(--spacing) * 4);
+  }
   .ms-2 {
     margin-inline-start: calc(var(--spacing) * 2);
   }
