--- a/tests/fastlife_app/static/css/main.css
+++ b/tests/fastlife_app/static/css/main.css
@@ -255,6 +255,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-4 {
+    margin-block: calc(var(--spacing) * 4);
+  }
   .ms-2 {
     margin-inline-start: calc(var(--spacing) * 2);
   }
